# crewai-playground

weather_checker/: .env.template  .gitignore  README.md  pyproject.toml
weather_checker/knowledge/: user_preference.txt
weather_checker/src/weather_checker/: crew.py  main.py
weather_checker/src/weather_checker/config/: agents.yaml  tasks.yaml
weather_checker/src/weather_checker/tools/: custom_tool.py  sms_tool.py
